# kaede

./: Cargo.toml  README.MD
src/: lib.rs
src/operasi/: akar_kuadrat.rs  bagi.rs  faktorial.rs  integral.rs  jumlah_deret_aritmatika.rs  jumlah_deret_geometri.rs  kali.rs  kosinus.rs  kurang.rs  limit.rs  logaritma.rs  logaritma_natural.rs  matrix.rs  mod.rs  modulo.rs  modus.rs  normal_pdf.rs  pangkat.rs  roots.rs  simplifikasi.rs  sinus.rs  tambah.rs  tangen.rs  trigonometry.rs
tests/: math_tests.rs
