[package]
name = "kaede"
version = "0.1.2"
authors = ["Khairandra Muhamad Nandyka <khairandramnandyka@gmail.com>"]
edition = "2021"

description = "Kaede adalah rust library untuk operasi matematika sederhana."

license = "MIT"

repository = "https://github.com/mornsoltice/kaede"

keywords = ["matematika", "rust", "library"]

[dependencies]
num = "0.4"
